--- a/src/index.css
+++ b/src/index.css
@@ -343,6 +343,9 @@ footer a:hover {
   .navegacion h1 {
     font-size: 1.8rem;
   }
+  .navegacion {
+    position: static;
+  }
   .navegacion ul {
     flex-direction: column;
     align-items: center;
